src/objects/PDF_to_VFP_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This object determines the custom settings for the PDF to VFP converter that may vary based on the orgs preferences.</description>
    <fields>
        <fullName>Apex_Version__c</fullName>
        <description>The version you want your apex pages generated at.</description>
        <inlineHelpText>The version you want your apex pages generated at. Example as of Summer 2019 we were on version 46.0</inlineHelpText>
        <label>Apex Page Version</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Library_Name__c</fullName>
        <description>The name of the content library you would like your pdf data to be stored in.</description>
        <inlineHelpText>The name of the content library you would like your pdf data to be stored in.</inlineHelpText>
        <label>Content Library Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Master_CSS_File__c</fullName>
        <description>The name of the static resource for the CSS file that controls the look and feel of the generated PDFs</description>
        <inlineHelpText>The name of the static resource for the CSS file that controls the look and feel of the generated PDFs</inlineHelpText>
        <label>PDF Master CSS File</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Admin_Profile_Name__c</fullName>
        <description>The name of the profile for system administrators in your org.</description>
        <inlineHelpText>The name of the profile for system administrators in your org.</inlineHelpText>
        <label>System Admin Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PDF to VFP Settings</label>
</CustomObject>